<resources>
    <string name="app_name">SmartLab</string>

    <string name="board1title">Анализы</string>
    <string name="board2title">Уведомления</string>
    <string name="board3title">Мониторинг</string>
    <string name="board1text">Экспресс сбор и получение проб</string>
    <string name="board2text">Вы быстро узнаете о результатах</string>
    <string name="board3text">Наши врачи всегда наблюдают за вашими показателями здоровья</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="info">Войдите чтобы пользоваться фунциями приложения</string>
    <string name="info1">Вход по E-mail</string>
    <string name="info2">Или войдите с помощью</string>
    <string name="info3">Без карты пациента вы не сможете заказать анализы.</string>
    <string name="info4">В картах пациентов будут храниться результаты анализов вас и ваших близких.</string>
    <string name="yandex">Войти с Яндекс</string>
    <string name="emailcode">Введите код из E-mail</string>
    <string name="pincode">Создайте пароль</string>
    <string name="pincode1">Для защиты ваших персональных данных</string>

    <string name="save">Сохранить</string>
    <string name="skip">Пропустить</string>
    <string name="close">Завершить</string>
    <string name="next">Далее</string>
    <string name="create">Создать</string>

    <string name="basket">Корзина</string>
    <string name="basket1">В корзину</string>
    <string name="order">Перейти к оформлению заказа</string>
    <string name="orderform">Оформление заказа</string>
    <string name="payment">Оплата</string>
    <string name="payment1">Ваш заказ успешно оплачен!</string>
    <string name="payment2">Вам осталось дождаться приезда медсестры и сдать анализы. До скорой встречи!</string>
    <string name="payment3">Не забудьте ознакомиться с </string>
    <string name="dateandtime">Дата и время</string>
    <string name="date">Выберите дату</string>
    <string name="time">Выберите время</string>
    <string name="check">Чек покупки</string>
    <string name="onmain">На главную</string>
    <string name="card">Карта пациента</string>

    <string name="sum">Сумма</string>
    <string name="confirm">Подтвердить</string>
    <string name="addpatient">Добавить пациента</string>
    <string name="addpatient1">Добавить еще пациента</string>

    <string name="find">   Искать анализы</string>
    <string name="news">Акции и новости</string>
    <string name="catalog">Каталог анализов</string>
    <string name="catalog1">Популярные</string>
    <string name="catalog2">Covid</string>
    <string name="catalog3">Комплексные</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>