<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignLogin">
<LinearLayout
    android:paddingHorizontal="20dp"
    android:layout_marginTop="40dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:background="@drawable/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginLeft="16dp"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
    <TextView
        android:layout_marginTop="23dp"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:paddingHorizontal="20dp"
        android:text="@string/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="64dp"
        android:textColor="@color/info"
        android:paddingHorizontal="20dp"
        android:text="@string/info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:padding="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edittextstyle"
        android:textColorHint="@color/hintcolor"
        android:hint="example@mail.ru"
        android:textSize="15dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>
    <Button
        android:textSize="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:background="@drawable/buttonstyle"
        android:backgroundTint="@color/buttonuncolor"
        android:layout_width="match_parent"
        android:layout_height="56dp"/>
    <TextView
        android:layout_marginTop="238dp"
        android:textColor="@color/hintcolor"
        android:layout_gravity="center"
        android:paddingHorizontal="20dp"
        android:text="@string/info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
    android:textSize="20dp"
        android:textStyle="bold"
    android:layout_marginTop="16dp"
        android:padding="18dp"
    android:layout_marginHorizontal="20dp"
        android:textAlignment="center"
    android:text="@string/yandex"
        android:textColor="@color/black"

    android:background="@drawable/textviewstyle"
    android:layout_width="match_parent"
    android:layout_height="60dp"/>

</LinearLayout>