<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/bottom_sheet_container"
    android:background="@drawable/bottom_sheet_dialog"
    android:orientation="vertical">
    <LinearLayout
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/dateandtime"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/btnClose"
            android:layout_marginLeft="200dp"
            android:background="@drawable/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:layout_marginTop="24dp"
        android:text="@string/date"
        android:textColor="@color/hintcolor"
        android:textSize="16dp"
        android:paddingLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_marginTop="14dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:layout_width="350dp"
            android:layout_height="47dp">
            <AutoCompleteTextView
                android:id="@+id/dayChoice"
                android:layout_gravity="center"
                android:background="@drawable/edittextstyle"
                android:textSize="16dp"
                android:textColor="@color/hintcolor"
                android:text=""
                android:inputType="none"
                android:layout_width="350dp"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/daysList"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="15dp"
            android:textSize="16dp"
            android:paddingVertical="14dp"
            android:textColor="@color/black"
            android:background="@drawable/edittextstyle"
            android:drawableRight="@drawable/drop"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>
    </FrameLayout>
    <TextView
        android:layout_marginTop="32dp"
        android:text="@string/time"
        android:textColor="@color/hintcolor"
        android:textSize="16dp"
        android:paddingLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/ten"
            android:text="10:00"
            android:background="@drawable/disabledtextview"
            android:textSize="15dp"
            android:textColor="@color/hintcolor"
            android:textStyle="bold"
            android:paddingVertical="14dp"
            android:paddingHorizontal="18dp"
            android:layout_width="wrap_content"
            android:layout_height="48dp" />

        <TextView
            android:id="@+id/one"
            android:text="13:00"
            android:background="@drawable/disabledtextview"
            android:textSize="15dp"
            android:textColor="@color/hintcolor"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"
            android:paddingVertical="14dp"
            android:paddingHorizontal="18dp"
            android:layout_width="wrap_content"
            android:layout_height="48dp" />
        <TextView
            android:id="@+id/two"
            android:text="14:00"
            android:background="@drawable/disabledtextview"
            android:textSize="15dp"
            android:textColor="@color/hintcolor"
            android:textStyle="bold"
            android:paddingVertical="14dp"
            android:paddingHorizontal="18dp"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="48dp" />
        <TextView
            android:id="@+id/three"
            android:text="15:00"
            android:background="@drawable/disabledtextview"
            android:textSize="15dp"
            android:textColor="@color/hintcolor"
            android:textStyle="bold"
            android:paddingVertical="14dp"
            android:paddingHorizontal="18dp"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="48dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/four"
            android:text="16:00"
            android:background="@drawable/disabledtextview"
            android:textSize="15dp"
            android:textColor="@color/hintcolor"
            android:textStyle="bold"
            android:paddingVertical="14dp"
            android:paddingHorizontal="18dp"
            android:layout_width="wrap_content"
            android:layout_height="48dp" />

        <TextView
            android:id="@+id/six"
            android:text="18:00"
            android:background="@drawable/disabledtextview"
            android:textSize="15dp"
            android:textColor="@color/hintcolor"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"
            android:paddingVertical="14dp"
            android:paddingHorizontal="18dp"
            android:layout_width="wrap_content"
            android:layout_height="48dp" />
        <TextView
            android:id="@+id/seven"
            android:text="19:00"
            android:background="@drawable/disabledtextview"
            android:textSize="15dp"
            android:textColor="@color/hintcolor"
            android:textStyle="bold"
            android:paddingVertical="14dp"
            android:paddingHorizontal="18dp"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="48dp" />
    </LinearLayout>
    <TextView
        android:id="@+id/btnConfirm"
        android:textSize="17dp"
        android:layout_marginTop="48dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/confirm"
        android:padding="15dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:onClick="onCreate"
        android:background="@drawable/enabledbutton"
        android:layout_width="match_parent"
        android:layout_height="56dp"/>


</LinearLayout>
