<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PinCode">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="28dp"
            android:id="@+id/btnNext"
            android:textSize="15dp"
            android:onClick="Next"
            android:layout_marginLeft="276dp"
            android:textColor="@color/blue"
            android:text="@string/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/pincode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/df"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="@color/hintcolor"
            android:text="@string/pincode1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <LinearLayout
            android:layout_gravity="center"
            android:layout_marginTop="56dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/num1"
                android:background="@drawable/ellipse_58"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/num2"
                android:layout_marginLeft="12dp"
                android:background="@drawable/ellipse_58"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/num3"
                android:layout_marginLeft="12dp"
                android:background="@drawable/ellipse_58"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/num4"
                android:layout_marginLeft="12dp"
                android:background="@drawable/ellipse_58"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/btnNum1"
                android:onClick="onClick"
                android:text="1"
                android:textSize="24dp"
                android:padding="20dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@drawable/textcolor"
                android:background="@drawable/numselection"
                android:layout_width="80dp"
                android:layout_height="80dp"/>
            <TextView
                android:id="@+id/btnNum2"
                android:onClick="onClick"
                android:layout_marginLeft="24dp"
                android:text="2"
                android:textSize="24dp"
                android:padding="20dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@drawable/textcolor"
                android:background="@drawable/numselection"
                android:layout_width="80dp"
                android:layout_height="80dp"/>
            <TextView
                android:id="@+id/btnNum3"
                android:onClick="onClick"
                android:layout_marginLeft="24dp"
                android:text="3"
                android:textSize="24dp"
                android:padding="20dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@drawable/textcolor"
                android:background="@drawable/numselection"
                android:layout_width="80dp"
                android:layout_height="80dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/btnNum4"
                android:onClick="onClick"
                android:text="4"
                android:textSize="24dp"
                android:padding="20dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@drawable/textcolor"
                android:background="@drawable/numselection"
                android:layout_width="80dp"
                android:layout_height="80dp"/>
            <TextView
                android:id="@+id/btnNum5"
                android:onClick="onClick"
                android:layout_marginLeft="24dp"
                android:text="5"
                android:textSize="24dp"
                android:padding="20dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@drawable/textcolor"
                android:background="@drawable/numselection"
                android:layout_width="80dp"
                android:layout_height="80dp"/>
            <TextView
                android:id="@+id/btnNum6"
                android:onClick="onClick"
                android:layout_marginLeft="24dp"
                android:text="6"
                android:textSize="24dp"
                android:padding="20dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@drawable/textcolor"
                android:background="@drawable/numselection"
                android:layout_width="80dp"
                android:layout_height="80dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/btnNum7"
                android:onClick="onClick"
                android:text="7"
                android:textSize="24dp"
                android:padding="20dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@drawable/textcolor"
                android:background="@drawable/numselection"
                android:layout_width="80dp"
                android:layout_height="80dp"/>
            <TextView
                android:id="@+id/btnNum8"
                android:onClick="onClick"
                android:layout_marginLeft="24dp"
                android:text="8"
                android:textSize="24dp"
                android:padding="20dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@drawable/textcolor"
                android:background="@drawable/numselection"
                android:layout_width="80dp"
                android:layout_height="80dp"/>
            <TextView
                android:id="@+id/btnNum9"
                android:onClick="onClick"
                android:layout_marginLeft="24dp"
                android:text="9"
                android:textSize="24dp"
                android:padding="20dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@drawable/textcolor"
                android:background="@drawable/numselection"
                android:layout_width="80dp"
                android:layout_height="80dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/btnNum0"
                android:onClick="onClick"
                android:layout_marginLeft="167dp"
                android:text="0"
                android:textSize="24dp"
                android:padding="20dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@drawable/textcolor"
                android:background="@drawable/numselection"
                android:layout_width="80dp"
                android:layout_height="80dp"/>
            <TextView
                android:id="@+id/btnNum3"
                android:onClick="onClick1"
                android:layout_marginLeft="46dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@drawable/textcolor"
                android:background="@drawable/del_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>